k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multiplexer
  labels:
    name: multiplexer
    app: multiplexer
