k8s/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplexer-agent
  namespace: quixagent
  labels:
    app: multiplexer-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiplexer-agent
  template:
    metadata:
      labels:
        app: multiplexer-agent
    spec:
      containers:
        - name: agent
          image: quixpublic.azurecr.io/agentmultiplexer:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: agent-certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: agent-certs
          secret:
            secretName: multiplexer-agent-certs
